Production/app2/webserver/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: prod-webserver-app2
    app.kubernetes.io/managed-by: argocd
    app.kubernetes.io/name: demo
    app.kubernetes.io/part-of: demo
    app.openshift.io/runtime: dotnet
  name: prod-webserver-app2
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: prod-webserver-app2
      app.kubernetes.io/name: demo
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: prod-webserver-app2
        app.kubernetes.io/managed-by: argocd
        app.kubernetes.io/name: demo
        app.kubernetes.io/part-of: demo
        app.openshift.io/runtime: dotnet
    spec:
      containers:
        - env:
            - name: IMAGE
              value: quay.io/thason/gitops-demo
            - name: TAG
              value: e28dc8ebfb4934cf1362f87285ebb7c2f1faf4cf
          image: 'quay.io/thason/gitops-demo:e28dc8ebfb4934cf1362f87285ebb7c2f1faf4cf'
          livenessProbe:
            httpGet:
              path: /health/liveliness
              port: http
          name: webserver
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health/readiness
              port: http
